--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8a111eb1bb.js" crossorigin="anonymous"></script>
-    <!-- <script src="./src/js/app/comment/comment.js" defer></script>
+    <script src="./src/js/app/comment/comment.js" defer></script>
     <script src="./src/js/app/comments/comments.js" defer></script>
     <script src="./src/js/app/video/video.js" defer></script>
     <script src="./src/js/app/main/main.js" defer></script>
@@ -18,8 +18,8 @@
     <script src="./src/js/app/yubtub/yubtub.js" defer></script>
     <script src="./src/js/app/cleaner/cleaner.js" defer></script>
     <script src="./src/js/app/switcher/switcher.js" defer></script>
+    <script src="./src/js/app/app.js" defer></script>
     <script src="./src/js/api/api.js" defer></script>
-    <script src="./src/js/app/app.js" defer></script> -->
     <script src="./main.js" defer></script>
 </head>
 <body>
